# Autonomous-Racing-Tech

./: README.md  Video Links
Code/control/art_mpc_interface/: CMakeLists.txt  package.xml
Code/control/art_mpc_interface/include/art_mpc_interface/: art_mpc_interface_config.hpp  art_mpc_interface_node.hpp  (+1 more)
Code/control/art_mpc_interface/launch/: art_mpc.launch.py
Code/control/art_mpc_interface/param/: art_mpc_interface.param.yaml
Code/control/art_mpc_interface/src/: art_mpc_interface_node.cpp  ros_param_loader.cpp
Code/control/art_mpc_interface/test/: test_art_mpc_interface.cpp
Code/control/lqg_controller/: CMakeLists.txt  package.xml
Code/control/lqg_controller/src/: lkf_calculator.cpp  lqg_controller.cpp  lqr_calculator.cpp
Code/control/lqg_controller/test/: test_lqg_controller.cpp
Code/control/vehicle_model/: CMakeLists.txt  package.xml
Code/control/vehicle_model/param/: hawaii_gokart.param.yaml  iac_car.param.yaml  sample_vehicle.param.yaml  svl_iac_car.param.yaml
Code/control/vehicle_model/src/: lookup.cpp  ros_param_loader.cpp  vehicle_model.cpp
Code/localization/robot_localization_interface/: CMakeLists.txt  package.xml
Code/localization/robot_localization_interface/launch/: ekf.launch.py
Code/localization/robot_localization_interface/src/: robot_localization_interface_node.cpp
Code/localization/velocity_estimation/: CMakeLists.txt  package.xml
Code/localization/velocity_estimation/launch/: velocity_estimation.launch.py
Code/localization/velocity_estimation/src/: velocity_estimation.cpp  velocity_estimation_node.cpp
Code/perception/autoware_perception_launch/: .gitignore  CMakeLists.txt  README.md  package.xml
Code/perception/autoware_perception_launch/config/: autoware_perception.rviz
Code/perception/autoware_perception_launch/launch/: autoware_perception.launch.py  image_detection.launch.py  lidar_centerpoint_detection.launch.py  lidar_concatenation.launch.py  lidar_detection.launch.py  lidar_euclidean_clustering.launch.py  lidar_preprocessor.launch.py  qualification_adapter.launch.py  rviz.launch.py  tracking.launch.py
Code/perception/autoware_perception_launch/param/: data_association_matrix.param.yaml  distance_threshold_list.param.yaml  ego_filter.param.yaml  lidar_centerpoint.param.yaml  lidar_preprocessor.param.yaml  tracker.param.yaml  yolov5l.param.yaml
Code/perception/polygon_transformer/: CMakeLists.txt  package.xml
Code/perception/polygon_transformer/launch/: polygon_transformer.launch.py
Code/perception/polygon_transformer/param/: iac_ims_inside.csv  iac_ims_outside.csv  iac_lor_inside.csv  iac_lor_outside.csv  iac_tms_inside.csv  iac_tms_outside.csv  iac_tms_outside_perception.csv  iac_tms_pit_inside.csv  polygon_remover_iac_lvms.param.yaml  svl_lvms_inside.csv  svl_lvms_outside.csv
Code/perception/polygon_transformer/src/: polygon_transformer.cpp
Code/perception/wall_boundary_segmentation/: CMakeLists.txt  package.xml
Code/perception/wall_boundary_segmentation/include/: wall_boundary_segmentation.hpp  wall_boundary_segmentation_node.hpp
Code/perception/wall_boundary_segmentation/launch/: wall_boundary_segmentation.launch.py
Code/perception/wall_boundary_segmentation/param/: wall_boundary_segmentation.param.yaml
Code/perception/wall_boundary_segmentation/src/: wall_boundary_segmentation.cpp  wall_boundary_segmentation_node.cpp
Code/simulation/art_autoware_interface/: CMakeLists.txt  package.xml
Code/simulation/art_autoware_interface/launch/: autoware_simple_simulator.launch.py
Code/simulation/art_autoware_interface/src/: art_autoware_interface.cpp
Code/simulation/carla_interface/: CMakeLists.txt  ReadMe.md  package.xml
Code/simulation/carla_interface/launch/: carla_launch_cpp_node.launch.py  carla_scripts.launch.py
Code/simulation/carla_interface/param/: carla_vars.yml
Code/simulation/carla_interface/scripts/: carla_ros_bridge_spinup.py  run_carla.py
Code/simulation/carla_interface/src/: carla_interface.cpp
Code/tools/art_startup_services/: CMakeLists.txt  package.xml  setup.bash
Code/tools/art_startup_services/launch/: gps_bottom.bash  gps_interface.bash  gps_top.bash  h3_f.bash  h3_lr.bash  h3_rr.bash  lgsvl_bridge.bash  radar_perception.bash  radars.bash  rosbag.bash  rosbag_compressed.bash  svl_all.bash  upload_aws.bash  vectornav.bash
Code/tools/art_startup_services/services/: art_rosbag.service  art_rosbag_compressed.service  gps_bottom.service  gps_interface.service  gps_top.service  h3_f.service  h3_lr.service  h3_rr.service  lgsvl_bridge@.service  radars.service  raptor.service  svl_all.service  vectornav.service
Code/tools/bank_angle_collector/: README.md  package.xml  setup.cfg  setup.py
Code/tools/bank_angle_collector/bank_angle_collector/: bank_angle_collector_node.py
Code/tools/bank_angle_collector/launch/: bank_angle_collector.launch.py
Code/tools/boundary_publisher/: CMakeLists.txt  package.xml
Code/tools/boundary_publisher/launch/: boundary_publisher.launch.py
Code/tools/boundary_publisher/param/: boundary_publisher.param.yaml
Code/tools/boundary_publisher/src/: boundary_publisher_node.cpp
Code/tools/ghost_car/: CMakeLists.txt  package.xml  plugins.xml
Code/tools/ghost_car/launch/: ghost_car.launch.py
Code/tools/ghost_car/param/: ghost_car_aw_sim_hawaii_gokart_aais.param.yaml  ghost_car_iac_ks.param.yaml  ghost_car_iac_lvms.param.yaml  ghost_car_svl_lvms.param.yaml
Code/tools/ghost_car/src/: ghost_car_node.cpp
Code/tools/race_telemetry/: CMakeLists.txt  package.xml
Code/tools/race_telemetry/launch/: telemetry.launch.py  visualization.launch.py
Code/tools/race_telemetry/param/: telemetry_hawaii_gokart.param.yaml  telemetry_iac_car.param.yaml  telemetry_svl_iac_car.param.yaml
Code/tools/race_telemetry/src/: telemetry.cpp  visualization.cpp  visualizer.cpp
Code/tools/udp_telemetry/: CMakeLists.txt  package.xml
Code/tools/udp_telemetry/launch/: udp_telemetry.launch.py
Code/tools/udp_telemetry/param/: udp_telemetry_hawaii_gokart.param.yaml  udp_telemetry_iac_car.param.yaml
Code/tools/udp_telemetry/src/: telemetry.cpp
(+202 files in other folders)
