<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>art_mpc_interface</name>
  <version>1.0.0</version>
  <description>interface with racing_mpc</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <license>LGPLv3</license>
  <author email="haorux@andrew.cmu.edu">Haoru Xue</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>backward_ros</depend>
  <depend>mpclab_msgs</depend>
  <depend>lmpc_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lmpc_transform_helper</depend>

  <depend>lmpc_utils</depend>
  <depend>single_track_planar_model</depend>
  <depend>racing_trajectory</depend>
  <depend>race_msgs</depend>

  <exec_depend>racing_lmpc_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
