<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lqg_controller</name>
  <version>0.0.1</version>
  <description>LQG Controller</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <maintainer email="dkalaria@andrew.cmu.edu">Dvij Kalaria</maintainer>
  <license>LGPLv3</license>
  <author email="haorux@andrew.cmu.edu">Haoru Xue</author>
  <author email="dkalaria@andrew.cmu.edu">Dvij Kalaria</author>
  <author email="djnighti@ucsd.edu">Dominic Nightingale</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>target_trajectory_line</depend>
  <depend>eigen</depend>
  <depend>base_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
