<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_perception_launch</name>
  <version>0.0.1</version>
  <description>Launch Autoware perception stack</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <license>LGPLv3</license>
  <author email="haorux@andrew.cmu.edu">Haoru Xue</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>pointcloud_preprocessor</exec_depend>
  <exec_depend>multi_object_tracker</exec_depend>
  <exec_depend>ground_segmentation</exec_depend>
  <exec_depend>euclidean_cluster</exec_depend>
  <exec_depend>detected_object_feature_remover</exec_depend>
  <exec_depend>autoware_auto_perception_rviz_plugin</exec_depend>
  <exec_depend>shape_estimation</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>polygon_transformer</exec_depend>
  <exec_depend>object_merger</exec_depend>
  <exec_depend>detection_by_tracker</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
