<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polygon_transformer</name>
  <version>0.0.1</version>
  <description>Transform GPS polygon to base_link</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <license>LGPLv3</license>
  <author email="haorux@andrew.cmu.edu">Haoru Xue</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>target_trajectory_line</depend>
  <depend>race_msgs</depend>
  <depend>transform_helper</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
