<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ghost_car</name>
  <version>0.0.0</version>
  <description>Ghost car to test planning stack</description>
  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  <license>LGPLv3</license>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>race_msgs</depend>
  <depend>target_trajectory_line</depend>
  <depend>base_common</depend>
  <depend>pluginlib</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_auto_perception_rviz_plugin</depend>
  <depend>simple_planning_simulator</depend>
  <depend>vehicle_model</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

